feat: failover for more than two connections

--- a/multiwan.conf
+++ b/multiwan.conf
@@ -4,14 +4,14 @@ PING_TIMEOUT=2
 SUCCESS_COUNT=4
 FAILURE_COUNT=1
 
-WAN_IF1="eth1"
-WAN_IF2="eth2"
+WAN_IF[1]="eth1"
+WAN_IF[2]="eth2"
 
-WAN_GW1="192.168.1.1"
-WAN_GW2="192.168.2.1"
+WAN_GW[1]="192.168.1.1"
+WAN_GW[2]="192.168.2.1"
 
-WAN_TABLE1="Verizon"
-WAN_TABLE2="Comcast"
+WAN_TABLE[1]="Verizon"
+WAN_TABLE[2]="Comcast"
 
-WAN_WEIGHT1=1
-WAN_WEIGHT2=2
+WAN_WEIGHT[1]=1
+WAN_WEIGHT[2]=2
